I.38 Náčrty, Beethovenova Sonáta č 1, op. 2-1

--- a/fopp3ed-slovak.tex
+++ b/fopp3ed-slovak.tex
@@ -1157,6 +1157,27 @@ Naučiť sa koordinovať obe ruky si bude vyžadovať veľa cvičenia. Predchád
 Najväčšou nevýhodou učenia sa RZ ako prvého je to, že spočiatku je koordinácia RS slabá. Preto si precvičte presné načasovanie medzi rukami pomocou cvičenia staccato. Schopnosť hrať RS pri plnej rýchlosti je nedostatočná; obe ruky musia byť presne koordinované. Akonáhle dokončíte skladbu RS, hrajte ju tak často, ako je to možné a tvorte hudbu, pretože hranie hotových skladieb je najdôležitejšou súčasťou výučby klavíra \textit{a rozvoja techniky}. Mať repertoár, ktorý je možné hrať v okamihu, je rozdiel medzi hudobníkom a amatérom, pretože techniku ​​môžete skutočne rozvinúť na úroveň hudobníka iba hraním hotových skladieb.
 
 \section{Náčrty, Beethovenova Sonáta č 1, op. 2-1}\label{s:outlining}
+\textbf{Náčrt}\index{náčrt} je metóda na urýchlenie procesu učenia zjednodušením hudby; funguje hraním RZ, ale používa sa hlavne na nácvik RS. Umožňuje klaviristovi udržiavať hudobný tok alebo rytmus, a to takmer okamžite v konečnej rýchlosti. To umožňuje hudobné cvičenie dlho predtým, ako sa daný segment dá zahrať uspokojivo rýchlo a uľahčuje osvojenie si ťažkej techniky tým, že naučí väčšie hracie členy (paže, ramená), ako sa pohybovať. Zjednodušenia sa dosahujú pomocou zariadení, ako je mazanie “menej dôležitých nôt” alebo kombinovanie série nôt do akordu. Pôvodná hudba sa obnoví postupným obnovovaním zjednodušených nôt. \hyperlink{r:whiteside}{Whitesideová} popisuje načrtnutie na str. 141 prvej knihy a str. 54-61, 105-107 a 191-196 druhej knihy, kde je analyzovaných niekoľko príkladov.
+
+Pre danú pasáž existuje veľa spôsobov, ako noty zjednodušiť, a študenti, ktorí používajú náčrt po prvýkrát, budú potrebovať určitú prax, kým budú môcť metódu naplno využiť. Pokročilé náčrty môžu byť oveľa zložitejšie, než aké študenti dokážu zvládnuť, a budú potrebovať pomoc učiteľa. Každý si však musí časom rozvinúť schopnosť ako načrtávať bez pomoci.
+
+Jedna myšlienka za načrtnutím je, že keď sa dostaneme k hudbe ako prvej, technika bude nasledovať rýchlejšie, pretože hudba a technika sú neoddeliteľné. Náčrt možno použiť aj na zvýšenie presnosti a zlepšenie zapamätania.
+
+Jednoduché metódy náčrtu sú (1) mazanie nôt, (2) konvertovanie arpeggií na akordy a (3) konvertovanie zložitých pasáží na jednoduchšie; tu prichádza na rad hudobná teória, ktorá môže byť komplikovaná. Dôležité pravidlo znie: hoci je hudba zjednodušená, zachovajte ten istý prstoklad, ktorý sa vyžadoval pred zjednodušením.
+
+Pre náčrt hraný RS zjednodušte jednu alebo obe ruky, aby ste ich mohli hrať RS ľahko, potom postupne pridávajte vymazaný materiál. Všimnite si, že náčrt je mimoriadne užitočná zručnosť na hru z listu.
+
+Aplikujme načrtnutie na Beethovenovu Sonátu \#1 (op. 2, č. 1). V recenzii knihy som si všimol, že \hyperlink{r:gieseking}{Gieseking} bol ľahostajný, keď odmietol 4. časť ako “nepredstavujúcu žiadne nové problémy” napriek ťažkému a rýchlemu LH arpeggiu (Prestissimo!). Pravdepodobne nevedel, ako riešiť problémy pomocou paralelných sád, a tak nemohol dávať inštrukcie. Dokončime úžasnú prácu, ktorú Gieseking urobil, keď nás začal s touto Sonátou tým, že sa uistíme, že môžeme hrať túto vzrušujúcu záverečnú časť.
+
+Prvé štyri trioly ĽR možno precvičiť použitím paralelných sád aplikovaných na každú triolu a potom cyklovaním. Tu je užitočná paralelná sada \#1; je to jeden typ obrysu (zjednodušenie trojíc na akordy). Prvú trojicu v druho  takte je možné cyklovať pomocou PS 524. Nepretržité cyklovanie 524 posilňuje slabý 4. prst. Keď sa 4. prst stane silným a pod kontrolou, pridajte ďalšiu notu, 5241, a potom cvičte PS 1235. TO sa vyžaduje všade. Potom cvičte vzostupné arpeggio tretieho taktu, 5421 PS, potom 542131. Precvičte si nasledujúce zostupné arpeggio pomocou rovnakých metód.
+
+PR je jednoduchá, môžete použiť pravidlá na precvičovanie akordov a skokov \fullrefp{s:fast-octaves}. Zatiaľ je všetko práca RZ.
+
+Na cvičenie RS \textbf{použite náčrt}. Zjednodušte ĽR a hrajte iba tóny (prvé tri takty): F3F3F3F3\textbar F3F3F2E2\textbar F2F3F3F3, s prstokladom 5555\textbar5155\textbar5155. Toto sú prvé tóny každej trojice. Keď je tento náčrt zvládnutý RZ, začnite precvičovať RS. Keď sa toto hranie RS stane pohodlným, pridávanie trojíc bude jednoduchšie, s oveľa menšou pravdepodobnosťou začlenenia chýb. Keďže tieto arpeggiá sú najnáročnejšie časti tejto vetu, ich načrtnutím je možné celú vetu precvičiť akoukoľvek rýchlosťou, aj keď tieto rýchle trioly nezvládnete.
+
+V PR sú prvé tri akordy mäkké a druhé tri sú forte. Na začiatku cvičte hlavne presnosť a rýchlosť, takže všetkých 6 akordov cvičte jemne, kým nezvládnete tento úsek. Potom pridajte forte. Ako vo všetkých Beethovenových skladbách je absolútne nevyhnutné sledovať dynamické (hlasitostné) značenie. Aby ste sa vyhli trafeniu nesprávnych tónov, zvyknite si cítiť tóny akordov pred ich hraním. Pri RH oktávovej melódii taktov 34-36 určite nehrajte so žiadnym crescendom, najmä s posledným G. Celá Sonáta sa hrá bez pedálu. Aby ste eliminovali akúkoľvek šancu na katastrofálny koniec, zahrajte posledné 4 tóny tohto pohybu s ĽR, čím sa ruka dostane do pozície skôr, ako to bude potrebné.
+
+Existuje mnoho spôsobov, ako načrtávať; trioly ĽR možno hrať ako akordy alebo ako PS. To vám umožní cvičiť RS vo fáze, keď ešte cvičíte paralelné sady. Použite načrtávanie ako poslednú možnosť, pretože môže zabrať veľa času; často to nie je potrebné, ak poznáte všetky ostatné metódy tejto knihy.
 
 \section{Pedál, fyzika zvuku klavíra}\label{s:damper-pedal}
 
@@ -1691,7 +1712,7 @@ Prvá polovica sa venuje všetkým základným pohybom a cvičeniam pre tieto po
 
 Obsahuje neuveriteľné množstvo informácií, z ktorých niektoré sú najpokrokovejšie, aké kde môžete nájsť, avšak knihe chýba organizovanosť, čo vás necháva zbierať útržky cenných informácií, tak ako ich vypúšťa von. Materiály sú veľmi široko založené, od učenie od Feldenkraisa po učenie vedomia a Tai Chi Chuan po Chi-kung, ale jasne pochádzajú od dobre vzdelaného koncertného klaviristu/skladateľa. Najužitočnejšie sú presné inštrukcie o špecifických technických materiáloch: Chopinov glissandový pohyb (“oddelenie” prstov), množstvo prekrývania sa nôt pri hraní legato, hranie so stranou prstov, interpretačné chyby pri inak užitočných pojmoch, ako sú váha paží, správne použitie palca, cvičenia typu útok akordu, oktávy, fortissimo, rozvoj svalu extenzora, používanie rotácie predlaktia, muzikalita: rytmus-frázovanie-orchestrácia, atď, atď. Jedinou slabinou som našiel bolo, že je tak ohromne blízko k celkovej pravde, ale ešte sa tam nie tak celkom dostal - je tu stále priestor pre zlepšenie, a čitateľ by mal pozrieť na tieto pokročilé oblasti, kde sa môžu dokonca ukrývať novšie nápady. \textbf{MUSÍTE SI PREČÍTAŤ}; v niektorých ohľadoch informatívnejšie ako ako Fink alebo Sandor.
 \medskip\\
-\textbf{Gieseking, Walter, a Leimer, Karl}, “Piano Technique”, 2 knihy v jednej, 1972, žiadne odkazy.
+\textbf{\hypertarget{r:gieseking}{Gieseking, Walter, a Leimer, Karl}}, “Piano Technique”, 2 knihy v jednej, 1972, žiadne odkazy.
 
 Línia výučby: Leimer-Gieseking. Prvá kniha: Gieseking, 77p. Význam počúvania, metóda “celého tela” (a la škola hmotnosti ramien), koncentrácia, precízne cvičenie, dôraz na detail. Vynikajúce pojednanie o tom, ako analyzovať kompozíciu pre jej nácvik a zapamätanie. Táto kniha je reprezentatívna ako väčšina kníh napísaných týmimto veľkými umelcami. Typické rady v oblasti techniky sú “koncentrácia, precízne cvičenie, a pozornosť k detailu bude automaticky viesť k technike” alebo "použite vaše ucho” alebo “Všetky noty akordu musia znieť spolu”, bez toho, aby dávali nejakú radu o tom, ako vlastne získať také zručnosti. 
 
@@ -1776,7 +1797,7 @@ Ale ako môže krehká osoba vykonávať “nemožné” cvičenia do vyčerpani
 
 Ďalší pozoruhodný učiteľ Liszta bol Salieri ktorý ho učil kompozíciu a teóriu. Salieri učil tiež Schuberta, ale Liszt sa s ním nikdy nestretol. V tej dobe mal Salieri cez 70 rokov, trpel pre podozrenie z otrávenia Mozarta zo žiarlivosti. Liszt sa stále zlepšoval vo veku 19 rokov. Jeho výkony sú pripočítaný k popularizácii klavíra. Je mu pripisované vynájdenie klavírneho recitálu (tým, že ho preniesol zo salónu do koncertnej sály). Jeden z jeho zariadení bolo použitie mnohých klavírov, rovnako ako mnoho klaviristov. Dokonca hral klavírne koncerty pre viac klavírov so Chopinom a ďalšími osobnosťami svojej doby. To vyvrcholilo oslavami až so šiestimi klavírmi, s reklamou ako “koncert 60 prstov”. V jednom úseku 10 týždňov, hral 21 koncertov a 80 diel, 50 spamäti. To, že tak mohol okúzliť svoje publikum bolo viac prekvapujúce, pretože zodpovedajúce klavíre (Steinway, Bechstein) neboli k dispozícii až do roku 1860, takmer 20 rokov po tom, čo prestal koncertovať.
 \medskip\\
-\textbf{Whiteside, Abby}\label{ref:whiteside}\\textbf{,} “On Piano Playing”, 2 knihy v jednej, 1997 , žiadne odkazy. Jedná sa o znovuvydanie “Indispensables of Piano Playing” (1955), a “Mastering Chopin Etudes and Other Essays” (1969). Výučba riadkov: Ganz - Whitesideová. 
+\textbf{\hypertarget{r:whiteside}{Whiteside, Abby}}\label{ref:whiteside}, “On Piano Playing”, 2 knihy v jednej, 1997 , žiadne odkazy. Jedná sa o znovuvydanie “Indispensables of Piano Playing” (1955), a “Mastering Chopin Etudes and Other Essays” (1969). Výučba riadkov: Ganz - Whitesideová. 
 
 \textbf{Prvá kniha:} “Indispensables of Piano Playing”, 155P. Používa neštandardnú angličtinu, spletitú logiku, biblické frazeológiu, dlhé rozvláčne a opakujúce sa. 
 
